<resources>
    <string name="app_name">Igniter</string>

    <string name="common_delete">Delete</string>
    <string name="common_alert">Alert</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_save_success">Save success</string>

    <string name="remote_addr">Remote Address</string>
    <string name="remote_port">Remote Port</string>
    <string name="local_or_clash_port">Local/Clash Port</string>
    <string name="default_port">443</string>
    <string name="default_local_or_clash_port">1080</string>
    <string name="password">Password</string>
    <string name="trojan_url">Trojan URL</string>
    <string name="button_service__start">Start</string>
    <string name="button_service__starting">Starting</string>
    <string name="button_service__stop">Stop</string>
    <string name="button_service__stopping">Stopping</string>
    <string name="verify_certificate">Verify Certificate</string>
    <string name="label_clash">Bypass China with <a href="https://github.com/Dreamacro/clash">Clash</a></string>
    <string name="enable_ipv6">Enable IPv6</string>
    <string name="enable_lan">Enable LAN</string>
    <string name="enable_auto_start">Enable Auto Start</string>
    <string name="bc_service_state">io.github.trojan_gfw.igniter.BC_SERVICE_STATE</string>
    <string name="stop_service">io.github.trojan_gfw.igniter.STOP_SERVICE</string>
    <string name="bind_service">io.github.trojan_gfw.igniter.BIND_SERVICE</string>
    <string name="connected_to__in__ms">Connected to %1$s in %2$sms.</string>
    <string name="failed_to_connect_to__">Failed to connect to %1$s: %2$s</string>
    <string name="invalid_configuration">Invalid Configuration</string>
    <string name="notification_channel_id">igniter_notify_chan</string>
    <string name="notification_channel_name">igniter_notify_channel</string>
    <string name="notification_channel_description">Igniter notifications channel</string>
    <string name="notification_starting_service">Starting service</string>
    <string name="main_restart_proxy_service_tip">Restart proxy yourself to apply new exempt apps configuration.</string>

    <string name="tile_on">Igniter ON</string>
    <string name="tile_starting">Igniter STARTING</string>
    <string name="tile_stopping">Igniter STOPPING</string>
    <string name="tile_off">Igniter OFF</string>
    <!-- App Bar Menu -->
    <string name="action_test_connection">Test Connection</string>
    <string name="action_show_develop_info_logcat">Show develop info in logcat</string>

    <string name="server_list_import_file_desc">Import config in file extension (*.txt)</string>
    <string name="server_list_file_chooser_msg">Select a TXT file</string>
    <string name="server_list_menu_import_from_file">Import from file</string>
    <string name="server_list_delete_btn">@string/common_delete</string>
    <string name="server_list_lack_of_camera_permission">Lack of camera permission!</string>
    <string name="server_list_lack_of_read_permission">Lack of read permission!</string>
    <string name="main_save_config_btn">Save</string>
    <string name="main_save_success">@string/common_save_success</string>
    <string name="main_save_failed">Save failed</string>

    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>

    <string name="main_write_external_storage_permission_requirement">
        Igniter needs to read and write external storage for reading or writing exempted app
        list, which is recoverable even when Igniter is uninstalled. Denying the permission
        will deactivate exempted app feature.
    </string>
    <string name="main_exempt_feature_permission_requirement">
        Please grant read and write external storage permission in Igniter application settings first.
    </string>
    <string name="main_menu_server_list">Server List</string>

    <string name="scan_qr_code_success">Add server success</string>
    <string name="scan_qr_code_failed">Cannot recognize trojanURL: %s</string>
    <string name="scan_qr_code">Scan QR</string>
    <string name="scan_qr_code_camera_error">Camera Error</string>

    <string name="menu_action_exempt_app_save">Save</string>
    <string name="menu_action_exempt_app">Exempt Apps</string>
    <string name="exempt_app_search_title">Search Apps</string>
    <string name="exempt_app_exit">Exit</string>
    <string name="exempt_app_exit_confirm">Are you sure to exit without save?</string>
    <string name="exempt_app_loading_tip">Loading…</string>
    <string name="exempt_app_exit_without_saving_confirm">Exit without saving exempt app list?</string>
    <string name="service_is_running">Igniter is running</string>
    <string name="enable_boot_start">Enable Boot Start</string>
</resources>
