<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view_server_list"
        android:icon="@drawable/ic_action_server_list"
        android:orderInCategory="100"
        android:title="@string/main_menu_server_list" />

    <item
        android:id="@+id/menu_clash_editor"
        android:icon="@drawable/ic_action_editor"
        android:orderInCategory="100"
        android:title="@string/clash_editor_file_editor" />

    <item
        android:id="@+id/action_exempt_app"
        android:icon="@drawable/ic_action_apps"
        android:orderInCategory="100"
        android:title="@string/menu_action_exempt_app" />

    <item
        android:id="@+id/action_test_connection"
        android:icon="@drawable/ic_action_connection"
        android:orderInCategory="100"
        android:title="@string/action_test_connection" />
</menu>