<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="contentDescription"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imageButton_save"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_action_save"
                android:contentDescription="@string/save" />
            <ImageButton
                android:id="@+id/imageButton_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_action_play"
                android:contentDescription="@string/play" />
            <ImageButton
                android:id="@+id/imageButton_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_action_stop"
                android:contentDescription="@string/stop" />
        </LinearLayout>

        <EditText
            android:id="@+id/remoteAddrText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/remote_addr"
            android:inputType="textUri"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/remotePortText"
                android:ems="10"
                android:hint="@string/remote_port"
                android:inputType="number"
                android:text="@string/default_port"
                android:textSize="20sp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/localOrClashPortText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/local_or_clash_port"
                android:inputType="number"
                android:maxLength="5"
                android:text="@string/default_local_or_clash_port"
                android:textSize="20sp"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remotePortText" />

        <EditText
            android:id="@+id/trojanURLText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/trojan_url"
            android:inputType="textUri"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/ipv6Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:minHeight="48dp"
            android:text="@string/enable_ipv6"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trojanURLText" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/verifySwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/verify_certificate"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipv6Switch" />

        <LinearLayout
            android:id="@+id/columnContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verifySwitch">

            <TextView
                android:id="@+id/clashLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:linksClickable="true"
                android:text="@string/label_clash"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_size"
                android:visibility="visible" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/clashSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:linksClickable="true"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_enable_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/enable_lan"
            android:textSize="@dimen/text_size" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_enable_auto_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/enable_auto_start"
            android:textSize="@dimen/text_size" />

<!--        <Button-->
<!--            android:id="@+id/saveConfigBtn"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/main_btn_height"-->
<!--            android:layout_margin="@dimen/main_btn_margin"-->
<!--            android:text="@string/main_save_config_btn"-->
<!--            android:textSize="@dimen/text_size"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/columnContainer" />-->

        <Button
            android:id="@+id/startStopButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_height"
            android:layout_margin="@dimen/main_btn_margin"
            android:text="@string/button_service__start"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveConfigBtn" />

    </LinearLayout>
</ScrollView>